--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -98,7 +98,7 @@ jobs:
           CRON_JOB_TOKEN: ${{ secrets.STAGING_CRON_JOB_TOKEN }}
           STRIPE_SECRET_KEY: ${{ secrets.STAGING_STRIPE_SECRET_KEY }}
           STRIPE_WEBHOOK_SECRET: ${{ secrets.STAGING_STRIPE_WEBHOOK_SECRET }}
-          supabaseservicekey: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
           VERIS_SIGNING_PRIVATE_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PRIVATE_KEY }}
           VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PUBLIC_KEY }}
 
@@ -112,7 +112,7 @@ jobs:
           CRON_JOB_TOKEN: ${{ secrets.STAGING_CRON_JOB_TOKEN }}
           STRIPE_SECRET_KEY: ${{ secrets.STAGING_STRIPE_SECRET_KEY }}
           STRIPE_WEBHOOK_SECRET: ${{ secrets.STAGING_STRIPE_WEBHOOK_SECRET }}
-          supabaseservicekey: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
           VERIS_SIGNING_PRIVATE_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PRIVATE_KEY }}
           VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PUBLIC_KEY }}
 
@@ -153,7 +153,7 @@ jobs:
           CRON_JOB_TOKEN: ${{ secrets.STAGING_CRON_JOB_TOKEN }}
           STRIPE_SECRET_KEY: ${{ secrets.STAGING_STRIPE_SECRET_KEY }}
           STRIPE_WEBHOOK_SECRET: ${{ secrets.STAGING_STRIPE_WEBHOOK_SECRET }}
-          supabaseservicekey: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.STAGING_SUPABASE_SERVICE_KEY }}
           VERIS_SIGNING_PRIVATE_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PRIVATE_KEY }}
           VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.STAGING_VERIS_SIGNING_PUBLIC_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}
