--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -31,7 +31,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Type check frontend
-        run: cd frontend && pnpm exec tsc --noEmit --project tsconfig.build.json
+        run: pnpm --filter frontend run typecheck
 
       - name: Type check SDK
         run: cd packages/sdk-js && pnpm run build
@@ -91,7 +91,7 @@ jobs:
           CRON_JOB_TOKEN: placeholder-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          supabaseservicekey: placeholder-service-key
+          SUPABASE_SERVICE_ROLE_KEY: placeholder-service-key
           VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\nplaceholder-private-key\n-----END PRIVATE KEY-----
           VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\nplaceholder-public-key\n-----END PUBLIC KEY-----
 
@@ -260,7 +260,7 @@ jobs:
           CRON_JOB_TOKEN: placeholder-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          supabaseservicekey: placeholder-service-key
+          SUPABASE_SERVICE_ROLE_KEY: placeholder-service-key
           VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\nplaceholder-private-key\n-----END PRIVATE KEY-----
           VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\nplaceholder-public-key\n-----END PUBLIC KEY-----
 
