--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -28,7 +28,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Type check frontend
         run: pnpm --filter frontend run typecheck
@@ -54,7 +54,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Lint frontend
         run: cd frontend && pnpm run lint || true
@@ -80,7 +80,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run frontend unit tests
         run: cd frontend && pnpm run test:ci
@@ -123,7 +123,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Install Playwright browsers
         run: cd frontend && pnpm exec playwright install --with-deps
@@ -164,7 +164,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run contract tests
         run: cd frontend && pnpm run test -- --testPathPattern="conformance"
@@ -188,7 +188,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Check Phase-1 metrics
         run: |
@@ -218,7 +218,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run security audit
         run: pnpm audit --audit-level moderate || true
@@ -249,7 +249,7 @@ jobs:
           version: 10.18.1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Build frontend
         run: cd frontend && pnpm run build
