--- a/.github/workflows/integrity.yml
+++ b/.github/workflows/integrity.yml
@@ -21,7 +21,7 @@ jobs:
           version: '10.18.1'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run Integrity Audit
         env:
