--- a/package.json
+++ b/package.json
@@ -14,10 +14,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.18.1",
-  "pnpm": {
-    "overrides": {
-      "validator": "^13.15.15"
-    }
-  }
+  "packageManager": "pnpm@10.18.1"
 }
