Fix: Add missing environment variables to Comprehensive Testing workflow
- Added required env vars to E2E, Performance, and Contract test jobs
- This should fix the 'Environment validation failed' errors
- All test jobs now have SUPABASE_SERVICE_ROLE_KEY, STRIPE credentials, and VERIS signing keys

--- a/.github/workflows/test-comprehensive.yml
+++ b/.github/workflows/test-comprehensive.yml
@@ -168,6 +168,16 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: test-key
           NEXT_PUBLIC_STRIPE_MODE: test
           NEXT_PUBLIC_SITE_URL: http://localhost:3000
+          CRON_JOB_TOKEN: test-cron-token
+          STRIPE_SECRET_KEY: sk_test_placeholder
+          STRIPE_WEBHOOK_SECRET: whsec_placeholder
+          SUPABASE_SERVICE_ROLE_KEY: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----
+test-private-key
+-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----
+test-public-key
+-----END PUBLIC KEY-----
 
       - name: Start application
         run: |
@@ -228,6 +238,16 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: test-key
           NEXT_PUBLIC_STRIPE_MODE: test
           NEXT_PUBLIC_SITE_URL: http://localhost:3000
+          CRON_JOB_TOKEN: test-cron-token
+          STRIPE_SECRET_KEY: sk_test_placeholder
+          STRIPE_WEBHOOK_SECRET: whsec_placeholder
+          SUPABASE_SERVICE_ROLE_KEY: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----
+test-private-key
+-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----
+test-public-key
+-----END PUBLIC KEY-----
 
       - name: Start application
         run: |
@@ -339,6 +359,16 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: test-key
           NEXT_PUBLIC_STRIPE_MODE: test
           NEXT_PUBLIC_SITE_URL: http://localhost:3000
+          CRON_JOB_TOKEN: test-cron-token
+          STRIPE_SECRET_KEY: sk_test_placeholder
+          STRIPE_WEBHOOK_SECRET: whsec_placeholder
+          SUPABASE_SERVICE_ROLE_KEY: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----
+test-private-key
+-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----
+test-public-key
+-----END PUBLIC KEY-----
 
       - name: Start application
         run: |
