Fix SDK linting by excluding test files
- Add --ignore-pattern for __tests__ directory in SDK lint step
- This prevents ESLint from trying to lint Jest test files
- Should fix Quality Gates workflow lint job failure

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -60,7 +60,7 @@ jobs:
         run: cd frontend && pnpm run lint || true
 
       - name: Lint SDK
-        run: cd packages/sdk-js && pnpm exec eslint src --ext .ts
+        run: cd packages/sdk-js && pnpm exec eslint src --ext .ts --ignore-pattern "**/__tests__/**"
 
   unit-tests:
     name: Unit Tests
